add cmake protobuf support. Fix unneeded protobuf regeneration

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,7 @@ add_subdirectory(vgui2/vgui_controls)
 add_subdirectory(vgui2/vgui_surfacelib)
 add_subdirectory(soundsystem/lowlevel)
 add_subdirectory(thirdparty/quickhull)
+add_subdirectory(thirdparty/protobuf-2.5.0/cmake)
 add_subdirectory(utils/bzip2)
 add_subdirectory(utils/jpeglib)
 add_subdirectory(unitlib)
