cmake link to rocketui project by target-name

--- a/game/client/CMakeLists.txt
+++ b/game/client/CMakeLists.txt
@@ -362,7 +362,8 @@ if( WINDOWS OR POSIX )
     target_link_libraries(${OUTBINNAME} vpklib_client)
 endif()
 if( USE_ROCKETUI )
-    target_link_libraries(${OUTBINNAME} ${SRCDIR}/thirdparty/RmlUi/build/libRmlCore.so)
+    #target_link_libraries(${OUTBINNAME} ${SRCDIR}/thirdparty/RmlUi/build/libRmlCore.so)
+    target_link_libraries(${OUTBINNAME} RmlCore)
 endif()
 target_link_libraries(${OUTBINNAME} matsys_controls_client)
 target_link_libraries(${OUTBINNAME} ${LIBPUBLIC}/libsteam_api.so) #proprietary steam api
