cmake - cleanup linking in vguimatsurface

--- a/vguimatsurface/CMakeLists.txt
+++ b/vguimatsurface/CMakeLists.txt
@@ -11,7 +11,7 @@ set(CMAKE_MODULE_PATH ${SRCDIR}/cmake)
 set(OUTBINNAME "vguimatsurface_client")
 set(OUTBINDIR ${SRCDIR}/../game/bin)
 
-set(NOSTINKYLINKIES "1") #this project requires precise linking
+#set(NOSTINKYLINKIES "1") #this project requires precise linking
 
 include(${CMAKE_MODULE_PATH}/detect_platform.cmake)
 include(${CMAKE_MODULE_PATH}/source_dll_base.cmake)
@@ -23,11 +23,6 @@ if( LINUXALL )
 endif()
 add_definitions(-DBENCHMARK -DVGUIMATSURFACE_DLL_EXPORT -DGAMEUI_EXPORTS -DDONT_PROTECT_FILEIO_FUNCTIONS -DPROTECTED_THINGS_ENABLE)
 add_definitions(-DENABLE_CHROMEHTMLWINDOW)
-
-if( LINUXALL )
-    target_link_options(${OUTBINNAME} PRIVATE "-L/usr/lib32 -L/usr/lib -L/usr/lib/i386-linux-gnu")
-    target_link_libraries(${OUTBINNAME} fontconfig freetype SDL2)
-endif()
 
 target_sources(${OUTBINNAME} PRIVATE "Clip2D.cpp")
 target_sources(${OUTBINNAME} PRIVATE "Cursor.cpp")
@@ -44,8 +39,8 @@ endif()
 target_sources(${OUTBINNAME} PRIVATE "${SRCDIR}/vgui2/src/vgui_key_translation.cpp")
 target_sources(${OUTBINNAME} PRIVATE "${SRCDIR}/public/vgui_controls/vgui_controls.cpp")
 
+target_link_libraries(${OUTBINNAME} vgui_controls_client vgui_surfacelib_client dmxloader_client tier2_client tier3_client mathlib_client bitmap_client libtier0_client libvstdlib_client )
+
 if( LINUXALL )
     target_link_libraries(${OUTBINNAME} fontconfig freetype SDL2)
 endif()
-
-target_link_libraries(${OUTBINNAME} vgui_controls_client vgui_surfacelib_client dmxloader_client tier2_client tier3_client mathlib_client bitmap_client libtier0_client libvstdlib_client )
