initial dedicated server support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,9 +53,11 @@ add_subdirectory(bonesetup)
 add_subdirectory(choreoobjects)
 add_subdirectory(datacache)
 add_subdirectory(dedicated)
+add_subdirectory(dedicated_main)
 add_subdirectory(dmserializers)
 add_subdirectory(dmxloader)
 add_subdirectory(engine)
+add_subdirectory(engine_ds)
 add_subdirectory(filesystem)
 add_subdirectory(inputsystem)
 add_subdirectory(localize)
