--- a/inputsystem/CMakeLists.txt
+++ b/inputsystem/CMakeLists.txt
@@ -3,8 +3,12 @@
 #//
 #//	Project Script
 #//-----------------------------------------------------------------------------
-
 cmake_minimum_required(VERSION 3.16)
+#dont build this on dedicated build
+if( DEDICATED )
+    return()
+endif()
+
 project(inputsystem_client)
 set(SRCDIR "${CMAKE_SOURCE_DIR}")
 set(CMAKE_MODULE_PATH ${SRCDIR}/cmake)
