--- a/launcher_main/CMakeLists.txt
+++ b/launcher_main/CMakeLists.txt
@@ -4,6 +4,10 @@
 #//	Project Script
 #//-----------------------------------------------------------------------------
 cmake_minimum_required(VERSION 3.16)
+#dont build this on dedicated build
+if( DEDICATED )
+    return()
+endif()
 project(launcher_main)
 set(SRCDIR "${CMAKE_SOURCE_DIR}")
 set(CMAKE_MODULE_PATH ${SRCDIR}/cmake)
@@ -32,4 +36,6 @@ include(${CMAKE_MODULE_PATH}/source_exe_base.cmake)
 
 target_sources(${OUTBINNAME} PRIVATE main.cpp)
 
-target_link_libraries(${OUTBINNAME} dl) #link for dlopen.
+if( LINUXALL )
+    target_link_libraries(${OUTBINNAME} dl) #link for dlopen.
+endif()
