Bullet Physics now working! New build options

--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@ cmake-dev-test/*
 cmake-build-*/*
 rocketui/cmake-build-*/*
 scaleformui/cmake-build-*/*
+vphysics_bullet/cmake-build-*/*
 
 #Ignore rebuilt static libs
 *.a
