--- a/.github/workflows/kstrike-compile.yml
+++ b/.github/workflows/kstrike-compile.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Preparing environment...
       env:
         DEBIAN_FRONTEND: "noninteractive"
-      run: apt update && apt upgrade -y && apt install -y git build-essential cmake libsdl2-mixer-dev libsdl2-dev libgoogle-perftools-dev libopenal-dev libcurlpp-dev libssl-dev libfontconfig1-dev libcurl4-openssl-dev net-tools wget unzip zip
+      run: sudo apt update && sudo apt upgrade -y && sudo apt install -y git build-essential cmake libsdl2-mixer-dev libsdl2-dev libgoogle-perftools-dev libopenal-dev libcurlpp-dev libssl-dev libfontconfig1-dev libcurl4-openssl-dev net-tools wget unzip zip
     - name: Building...
       run: mkdir build && cd build && cmake .. && make -j2 -DUSE_KISAK_PHYSICS=1 -DUSE_ROCKETUI=1 && cd ${{env.GITHUB_WORKSPACE}}
     - name: Preparing additional files...
