Update workflow file v2

--- a/.github/workflows/kstrike-compile.yml
+++ b/.github/workflows/kstrike-compile.yml
@@ -19,7 +19,7 @@ jobs:
         DEBIAN_FRONTEND: "noninteractive"
       run: sudo apt update && sudo apt upgrade -y && sudo apt install -y git build-essential cmake libsdl2-mixer-dev libsdl2-dev libgoogle-perftools-dev libopenal-dev libcurlpp-dev libssl-dev libfontconfig1-dev libcurl4-openssl-dev net-tools wget unzip zip
     - name: Building...
-      run: mkdir build && cd build && cmake .. && make -j2 -DUSE_KISAK_PHYSICS=1 -DUSE_ROCKETUI=1 && cd ${{env.GITHUB_WORKSPACE}}
+      run: mkdir build && cd build && cmake .. -DUSE_KISAK_PHYSICS=1 -DUSE_ROCKETUI=1 && make -j2 && cd ${{env.GITHUB_WORKSPACE}}
     - name: Preparing additional files...
       run: git clone https://github.com/SwagSoftware/Kisak-Strike-Files && cp -r Kisak-Strike-Files/* ../game
     - name: Compressing assets...
