--- a/.github/workflows/kstrike-compile.yml
+++ b/.github/workflows/kstrike-compile.yml
@@ -31,5 +31,5 @@ jobs:
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: ./game-rocketui.zip
-        asset_name: Release-${{env.GITHUB_WORKSPACE}}
+        asset_name: Release-${{env.GITHUB_RUN_ID}}
         asset_content_type: application/zip
