Update workflow file v4

--- a/.github/workflows/kstrike-compile.yml
+++ b/.github/workflows/kstrike-compile.yml
@@ -29,9 +29,9 @@ jobs:
     - name: Preparing additional files...
       run: git clone https://github.com/SwagSoftware/Kisak-Strike-Files && cp -r Kisak-Strike-Files/* ../game
     - name: Compressing assets...
-      run: cd .. && zip -9 -r game_client-kphys.zip game && rm -rf game && cd ${{env.GITHUB_WORKSPACE}}
+      run: cd .. && zip -9 -r game_client-kphys.zip game && rm -rf game && cd ${{ env.GITHUB_WORKSPACE }}
     - name: Building dedicated...
-      run: mkdir build && cd build && cmake .. -DUSE_KISAK_PHYSICS=1 -DDEDICATED=1 && make -j2 && cd ${{ env.GITHUB_WORKSPACE }}
+      run: cd build && cmake .. -DUSE_KISAK_PHYSICS=1 -DDEDICATED=1 && make -j2 && cd ${{ env.GITHUB_WORKSPACE }}
     - name: Compressing assets...
       run: cd .. && zip -9 -r game_dedicated-kphys.zip game && rm -rf game && cd ${{ env.GITHUB_WORKSPACE }}
     - name: Create release
