--- a/.github/workflows/kstrike-compile.yml
+++ b/.github/workflows/kstrike-compile.yml
@@ -42,7 +42,7 @@ jobs:
       with:
         draft: false
         prerelease: false
-        release_name: Release-${{ env.GITHUB_RUN_ID }}
+        release_name: Release-Linux
         tag_name: ${{ github.ref }}
     - name: Publish game client artifact
       uses: actions/upload-release-asset@v1
