--- a/external/crypto++-5.61/CMakeLists.txt
+++ b/external/crypto++-5.61/CMakeLists.txt
@@ -23,10 +23,17 @@ endif()
 if(UNIX AND NOT APPLE)
 	#Downgrade ABI for kisakstrike
 	message(STATUS "Downgrading CXX11 ABI for kisakstrike!")
-	add_definitions(-D_GLIBCXX_USE_CXX11_ABI=0 -O2 -march=native -fpermissive -fpic -Wno-narrowing)
-	# VALVE: when steamclient.so is launched from Python the stack is not 16-byte aligned and gcc assumes
-	# that it will be, causing crashes when writing to SSE local variables.
-	add_definitions( -mstackrealign)
+	if(CMAKE_SYSTEM_PROCESSOR STREQUAL "e2k")
+		# O3 on mcst-lcc approximately equal to O2 at gcc X86/ARM
+		add_definitions(-D_GLIBCXX_USE_CXX11_ABI=0 -O3 -march=native -fpermissive -fpic -Wno-narrowing)
+		# -mstackrealign option is X86 specific and not supported by mcst-lcc
+		# see https://gcc.gnu.org/onlinedocs/gcc/x86-Options.html
+	else()
+		add_definitions(-D_GLIBCXX_USE_CXX11_ABI=0 -O2 -march=native -fpermissive -fpic -Wno-narrowing)
+		# VALVE: when steamclient.so is launched from Python the stack is not 16-byte aligned and gcc assumes
+		# that it will be, causing crashes when writing to SSE local variables.
+		add_definitions( -mstackrealign)
+	endif()
 endif()
 
 set(cryptopp_VERSION_MAJOR 5)
